# WaterSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  readme
include/WaterSimulation/: Camera.h  DebugDraw.h  ECS.h  FrustumVisualizer.h  Mesh.h  MeshComponent.h  OrthoognalCamera.h  PhysicsUtils.h  RenderSystem.h  ShallowWater.h  ShallowWaterCPU.h  UIManager.h  WaterShader.h  WaterSimulation.h
include/WaterSimulation/Components/: BuoyancyComponent.h  ColliderComponent.h  DirectionalLightComponent.h  HierarchyComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  RigidBodyComponent.h  ShaderComponent.h  ShadowCasterComponent.h  TerrainComponent.h  TransformComponent.h  WaterComponent.h
include/WaterSimulation/Rendering/: CausticPass.h  CausticUtil.h  CompositionPass.h  DepthPass.h  GodRayPass.h  HeightmapReadback.h  IShader.h  OpaquePass.h  ShadowMapPass.h
include/WaterSimulation/Rendering/CustomShader/: BlurShader.h  CausticShader.h  DebugShader.h  DepthDebugShader.h  DepthShader.h  FullscreenTextureShader.h  GodRayShader.h  OpaqueShader.h  PBRShader.h  TerrainShader.h  WaterPosShader.h
include/WaterSimulation/Systems/: PhysicsSystem.h  RenderSystem.h  TransformSystem.h
resources/: resources.conf
resources/shaders/: FullscreenTextureShader.fs  FullscreenTextureShader.vs  blur.fs  blur.vs  caustic.fs  caustic.geom  caustic.vs  depthDebugShader.fs  depthDebugShader.vs  depthShader.fs  depthShader.vs  disturbance.comp  godray.fs  godray.geom  godray.vs  opaqueShader.fs  opaqueShader.vs  pbrShader.fs  pbrShader.vs  terrain.fs  terrainShader.fs  terrainShader.vs  water.fs  water.vs  waterPos.fs  waterPos.vs
resources/shaders/compute/: CS_FFTHorizontal.comp  CS_FFTVertical.comp  advectSurface.comp  airywaves.comp  bitreverse.comp  clear.comp  clearRG.comp  copy.comp  copyRGBA.comp  createWater.comp  debugAlpha.comp  decompose.comp  fft.comp  init.comp  normalize.comp  recompose.comp  transportSurface.comp  transportSurfaceFlow.comp  transportSurfaceHeight.comp  updateFluxes.comp  updateHeightSimple.comp  updateWaterHeight.comp
resources/shaders/tesselation/: waterTesselationControl.tcs  waterTesselationEvaluation.tes
ressources/shaders/: debug.fs  debug.vs  water.fs  water.vs
ressources/shaders/compute/: applyBarrier.comp  computeVelocities.comp  init.comp  initDamBreak.comp  updateFluxes.comp  updateWaterHeight.comp
src/: CMakeLists.txt  DebugDraw.cpp  FrustumVisualizer.cpp  Mesh.cpp  MeshComponent.cpp  PhysicsUtils.cpp  RenderSystem.cpp  ShallowWater.cpp  UIManager.cpp  WaterSimulation.cpp
src/Components/: MeshComponent.cpp
src/Rendering/: CausticPass.cpp  CompositionPass.cpp  DepthPass.cpp  GodRayPass.cpp  HeightmapReadback.cpp  OpaquePass.cpp  ShadowMapPass.cpp
src/Systems/: PhysicsSystem.cpp  RenderSystem.cpp  TransformSystem.cpp
